--- a/alarm/pom.xml
+++ b/alarm/pom.xml
@@ -8,7 +8,7 @@
 		<version>2.3.1.RELEASE</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>kt</groupId>
+	<groupId>ktphoneloss</groupId>
 	<artifactId>alarm</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>alarm</name>
