--- a/loss/src/main/resources/application.yml
+++ b/loss/src/main/resources/application.yml
@@ -31,12 +31,12 @@ spring:
         event-in:
           group: loss
 #<<< EDA / Topic Name
-          destination: kt
+          destination: ktphoneloss
 #>>> EDA / Topic Name
           contentType: application/json
         event-out:
 #<<< EDA / Topic Name
-          destination: kt
+          destination: ktphoneloss
 #>>> EDA / Topic Name
           contentType: application/json
 
@@ -79,10 +79,10 @@ spring:
       bindings:
         event-in:
           group: loss
-          destination: kt
+          destination: ktphoneloss
           contentType: application/json
         event-out:
-          destination: kt
+          destination: ktphoneloss
           contentType: application/json
 
 api:
